@@ -31,26 +31,20 @@ def inventory_blade_bx_load(info):
         return [ (None, "blade_bx_cpuload_default_levels")]
 
 def check_blade_bx_load(item, params, info):
-    load = []
-    for i in [ 0, 1, 2 ]:
-        load.append(float(info[i][2]))
-
-    warn, crit = params
-
-    perfdata = [ ('load' + str(z), l, warn, crit, 0 ) for (z,l) in [ (1,load[0]), (5,load[1]), (15, load[2]) ] ]
-
-    if load[2] >= crit:
-        return (2, "15min Load %.2f (critical at %.2f)" % (load[2], crit), perfdata)
-    elif load[2] >= warn:
-        return (1, "15min Load %.2f (warning at %.2f)" % (load[2], warn), perfdata)
-    else:
-        return (0, "15min Load %.2f " % (load[2]), perfdata)
+    return check_cpu_load_generic(params, [ float(l[2]) for l in info ])
 
 check_info['blade_bx_load'] = {
     "check_function"      : check_blade_bx_load,
     "inventory_function"  : inventory_blade_bx_load ,
     "service_description" : "CPU load",
     "has_perfdata"        : True,
+    # Note: I'm not sure if this check is working at all. If yes,
+    # then the SNMP implementation of that device must be broken.
+    # It would use the same MIB as ucd_snmp_load, but with other
+    # semantics. Please compare. Please mail us an cmk --snmpwalk of
+    # such a device, if you have one.
     "snmp_info"           : (".1.3.6.1.4.1.2021.10.1", [ 1, 2, 6 ]),
     "snmp_scan_function"  : lambda oid: "BX600" in oid(".1.3.6.1.2.1.1.1.0"),
+    "group"               : "cpu_load",
+    "includes"            : "cpu_load.include",
 }
