@@ -36,28 +36,14 @@ def inventory_cpu_load(info):
         return [(None, "cpuload_default_levels")]
 
 def check_cpu_load(item, params, info):
-    load = []
-    for i in [ 0, 1, 2 ]:
-        load.append(float(info[0][i]))
     if len(info[0]) >= 6:
         num_cpus = int(info[0][5])
     else:
         num_cpus = 1
 
-    # Prepare performance data
-    if type(params) == tuple:
-        warn, crit = [ p*num_cpus for p in params ]
-    else:
-        warn, crit = None, None
-    perfdata = [ ('load' + str(z), l, warn, crit, 0, num_cpus )
-                 for (z,l) in [ (1,load[0]), (5,load[1]), (15, load[2]) ] ]
+    load = map(float, info[0][0:3])
+    return check_cpu_load_generic(params, load, num_cpus)
 
-    state, text, perf = check_levels(load[2], 'load15', params, factor = num_cpus)
-    perfdata += perf
-    infotext = "15min load %.2f at %d CPUs" % (load[2], num_cpus)
-    if text:
-        infotext += ", " + text
-    return state, infotext, perfdata
 
 def inventory_cpu_threads(info):
     if len(info) == 1 and len(info[0]) >= 5:
@@ -83,6 +69,7 @@ check_info["cpu.loads"] = {
     "service_description"     : "CPU load",
     "has_perfdata"            : True,
     "group"                   : "cpu_load",
+    "includes"                : "cpu_load.include",
 }
 
 check_info["cpu.threads"] = {
