@@ -30,27 +30,16 @@ def inventory_statgrab_load(info):
     return [(None, 'cpuload_default_levels')]
 
 def check_statgrab_load(item, params, info):
+    load = [0.0, 0.0, 0.0]
     for var, value in info:
         if var == 'min1':
-            load_1 = float(value)
+            load[0] = float(value)
         elif var == 'min5':
-            load_5 = float(value)
+            load[1] = float(value)
         else:
-            load_15 = float(value)
+            load[2] = float(value)
 
-    warn, crit = params
-    perfdata = [ ('load' + str(z), l, warn, crit, 0 )
-                 for (z,l) in
-                 [ (1, load_1), (5, load_5), (15, load_15) ] ]
-
-    if load_15 >= crit:
-        return (2, "15min load %.2f (critical at %.2f)" % (load_15, crit), perfdata)
-    elif load_15 >= warn:
-        return (1, "15min load %.2f (warning at %.2f)" % (load_15, warn), perfdata)
-    else:
-        return (0, "15min load %.2f" % load_15, perfdata)
-
-
+    return check_cpu_load_generic(params, load)
 
 
 check_info["statgrab_load"] = {
@@ -59,4 +48,5 @@ check_info["statgrab_load"] = {
     'service_description':     'CPU load',
     'has_perfdata':            True,
     'group':                   'cpu_load',
+    "includes"                : "cpu_load.include",
 }
