@@ -32,17 +32,7 @@ def inventory_ucd_cpu_load(info):
         return [(None, "cpuload_default_levels")]
 
 def check_ucd_cpu_load(item, params, info):
-    load = [ float(line[0]) for line in info ]
-    warn, crit = params # apply on 15min average, relative to number of CPUs
-    perfdata = [ ('load' + str(z), l, warn, crit, 0 ) for (z,l) in [ (1,load[0]), (5,load[1]), (15, load[2]) ] ]
-
-    if load[2] >= crit:
-        return (2, "15min Load %.2f (critical at %.2f)" % (load[2], crit), perfdata)
-    elif load[2] >= warn:
-        return (1, "15min Load %.2f (warning at %.2f)" % (load[2], warn), perfdata)
-    else:
-        return (0, "15min Load %.2f" % load[2], perfdata)
-
+    return check_cpu_load_generic(params, [ float(l[0]) for l in info ])
 
 
 # We are not sure how to safely detect the UCD SNMP Daemon. We know that
@@ -58,6 +48,8 @@ check_info["ucd_cpu_load"] = {
     'snmp_info':               ('.1.3.6.1.4.1.2021.10.1', [6]),
     'snmp_scan_function':      \
      lambda oid: "linux" in oid(".1.3.6.1.2.1.1.1.0").lower() or \
-                 "CMC-TC" in oid(".1.3.6.1.2.1.1.1.0"),
+                 "CMC-TC" in oid(".1.3.6.1.2.1.1.1.0") or \
+                 "HP Onboard Administrator" in oid(".1.3.6.1.2.1.1.1.0"),
     'group':                   'cpu_load',
+    "includes"                : "cpu_load.include",
 }
