@@ -98,6 +98,7 @@ check_info["ucd_cpu_util"] = {
     'snmp_info':               ('.1.3.6.1.4.1.2021.11', [50, 51, 52, 53, 54, 55, 56]),
     'snmp_scan_function':      \
      lambda oid: "linux" in oid(".1.3.6.1.2.1.1.1.0").lower() or \
-                 "CMC-TC" in oid(".1.3.6.1.2.1.1.1.0"),
+                 "CMC-TC" in oid(".1.3.6.1.2.1.1.1.0") or \
+                 "HP Onboard Administrator" in oid(".1.3.6.1.2.1.1.1.0"),
     'group':                   'cpu_iowait',
 }
